--- a/src/index.css
+++ b/src/index.css
@@ -44,10 +44,28 @@ code {
   }
 }
 
-footer{
+footer p{
   margin: 0;
   padding: 0;
+  position: bottom;
 }
+
+.contact_div{
+  width:100%;
+  height: 75vh;
+}
+
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #fff;
+  color: white;
+  text-align: center;
+}
+
+
 
 /* ------------------- Main Landing Section ------------------- */
 #header{
@@ -106,6 +124,33 @@ footer{
   100%{
     transform: translateY(-10px);
   }
+}
+@media(max-width:991px){
+  #header{
+    height: 80vh;
+    text-align: center;
+  }
+  #header .header-img{
+    text-align: center;
+  }
+  #header .header-img img {
+    width: 60%;
+  }
+  
+}
+
+@media(max-width:768px){
+  #header{
+   margin-top: 20px;
+  }
+  #header .header-img{
+    font-size: 18px;
+    margin-bottom: 30px;
+  }
+  #header .header-img img {
+    width: 70%;
+  }
+  
 }
 
 
